<resources>
    <string name="app_name">OSMARealTest</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="enter_account_details">Enter account details</string>
    <string name="choose_account_type">Choose account type</string>
    <string name="or">or</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_password">Enter password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="e_g_account_gmail_com">e.g. account@gmail.com</string>
    <string name="customer">Customer</string>
    <string name="supplier">Supplier</string>
    <string name="sign_in">Sign in</string>
    <string name="login">Login</string>
    <string name="todo">TODO</string>
    <string name="sign_up">Sign up</string>
    <string name="login_your_account">Login your account</string>
    <string name="action_settings" />
    <string name="account_name"><![CDATA[<account_name>]]></string>
    <string name="profile">Profile</string>
    <string name="username">Username:</string>
    <string name="account_type">Account Type:</string>
    <string name="account_email"><![CDATA[<account_email>]]></string>
    <string name="account_typep"><![CDATA[<account_type>]]></string>
    <string name="e_mail_address">E-mail Address:</string>
    <string name="account_password"><![CDATA[<account_password>]]></string>
    <string name="password">Password:</string>
    <string name="edit">Edit</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete Account</string>
    <string name="tip_you_can_create_two_types_of_accounts_namely_a_customer_or_a_supplier_depending_on_what_you_would_want_use_the_software_for">TIP: You can create two types of accounts namely a Customer or a Supplier depending on what you would want use the software for.</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="submit">Submit</string>
    <string name="activation_key_xxxx_xxxx">Activation Key: XXXX-XXXX</string>
    <string name="back_to_login">Back to login</string>
    <string name="resend_activation_key">Resend activation key</string>
    <string name="edit_password">Edit Password</string>
    <string name="product_list">Product List</string>
    <string name="marketing_analysis">Marketing Analysis</string>
    <string name="my_products">My Products</string>
    <string name="feedback_system">Feedback System</string>
    <string name="transaction_rate">Transaction Rate</string>
    <string name="total_income">Total Income</string>
    <string name="others_analysis">Others\' Analysis</string>
    <string name="others_products">Others\' Products</string>
    <string name="chat">Chat</string>
    <string name="enter_username_to_lookup">Enter username to lookup</string>
    <string name="recipient_name"><![CDATA[<Recipient Name>]]></string>
    <string name="n_message_n_n_n_sent_date_time"><![CDATA[\n <message>\n\n\n Sent <date> <time>]]></string>
    <string name="write_a_message">Write a message...</string>
    <string name="message_n_sent_date_time"><![CDATA[<message>\n Sent <date, time>]]></string>
    <string name="receipts">Receipts</string>
    <string name="purchase_products">Purchase products</string>
    <string name="type">Type</string>
    <string name="sort">Sort</string>
    <string name="selling_cost_product_name"><![CDATA[<selling_cost>: <product_name>]]></string>
    <string name="by_supplier_name"><![CDATA[By: <supplier_name>]]></string>
    <string name="search_a_product">Search a product...</string>
</resources>